<resources>
    <string name="app_name">FirstProject</string>

    <string name="hello_world">Hello World!</string>
    <string name="start_linear_layout">Start Linear Layout</string>
    <string name="view_1">View 1</string>
    <string name="view_2">View 2</string>
    <string name="view_3">View 3</string>

    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNumberLabel">Phone Number:</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="emailAddressLabel">Email Address:</string>
    <string name="emailAddress">Email Address</string>
    <string name="txtNeedHelp">Do you need help?</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonSave">Save</string>

    <string-array name="arrayPhoneCountryCodes">
        <item>+254</item>
        <item>+255</item>
        <item>+256</item>
        <item>+001</item>
        <item>+121</item>
        <item>+613</item>
    </string-array>

</resources>
